--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc"
+    "docker:build": "powershell ./scripts/build-dockers.ps1",
+    "docker:build:linux": "chmod +x ./scripts/build-dockers.sh && ./scripts/build-dockers.sh",
   },
   "dependencies": {
     "express": "^4.18.2",
